fix button rending on mobile

--- a/app/assets/stylesheets/code.scss
+++ b/app/assets/stylesheets/code.scss
@@ -79,6 +79,7 @@ h1 {
 	font-size: 16px;
 	padding: 10px 0px;
 	width: 300px;
+	-webkit-appearance: none;
 }
 
 .gen-button:hover {
@@ -231,6 +232,7 @@ h1 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	width: 100%;
+	-webkit-appearance: none;
 }
 
 // CODE COUNTER
